--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/sweetalert": "^2.0.4",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next-routes": "^1.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.5.3",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4"
   }
 }
