--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/sweetalert": "^2.0.4",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.3",
     "next": "14.2.4",
     "next-routes": "^1.4.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-live-clock": "^6.1.23-beta",
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
