--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/react": "^2.4.6",
     "@types/sweetalert": "^2.0.4",
     "chart.js": "^4.4.3",
     "firebase": "^10.12.3",
+    "framer-motion": "^11.3.13",
     "next": "14.2.4",
     "next-routes": "^1.4.2",
     "react": "^18.3.1",
